--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,13 @@ resnet18_lifting.txt
 resnet18.txt
 
 resnet50_lifting.txt
+
+Fined-Grain-Model.txt
+
+Fined-Grain-Model2.txt
+
+lifting.txt
+
+mobilenet_v2_LDW.txt
+
+mobilenet_v2.txt
